# presentations-articles

./: README.md
.github/workflows/: marp-to-pages.yml
articles/typeclass_in_python/: README.md  pyproject.toml
articles/typeclass_in_python/examples/: cat_and_dog.py  eq.py  maybe_divide.py  result_divede.py  simple_divide.py
articles/why-dont-i-like-python-anymore/: README.md
slides/: README.md  category-theory.md
