[tool.poetry]
name = "typeclass-in-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "typeclass_in_python"}]

[tool.poetry.dependencies]
python = "^3.10"
sparrow = {git = "https://github.com/FabianVegaA/sparrow.git"}


[tool.poetry.group.format.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"